--- a/src/components/product/ProductItem/productItem.scss
+++ b/src/components/product/ProductItem/productItem.scss
@@ -1,13 +1,8 @@
 .card{
-  display: flex;
-  width: 300px;
-  height: 200px;
-  cursor: pointer;
-  justify-content: center;
-  align-items: center;
   &__title{
     h4{
       margin: 0;
+      padding: 0;
     }
   }
 }
