--- a/src/components/auth/userAuth.scss
+++ b/src/components/auth/userAuth.scss
@@ -14,6 +14,9 @@
   &__text{
     padding-top: 10px;
     cursor: pointer;
+    &:hover{
+        border-bottom: solid 0.3px #007FFF;
+    }
   }
   &__btn{
     width: 100px;
